# llm-zoomcamp

./: .gitignore  README.md  docker-compose-qdrant.yml  docker-compose.yaml  pyproject.toml
01-intro/: models_store.ipynb  parse-faq.ipynb  rag-intro.ipynb  sandbox.ipynb
02-2024-vector-search/03-vector-search/: demo_es.ipynb
02-vector-search/: sematic_search.ipynb
papas-rag/docs/: documents.json
papas-rag/src/: papas-rag.ipynb
